# Abaja-simulation

install/: local_setup.sh  setup.sh
install/vehicle/lib/vehicle/: CMakeLists.txt  acker  calibration_publisher.py  package.xml  setup.py
install/vehicle/lib/vehicle/config/: joint_names_B4WTYPE3.yaml
install/vehicle/lib/vehicle/launch/: display.launch.py  gazebo.launch.py
install/vehicle/lib/vehicle/urdf/: B4WTYPE3.urdf
install/vehicle/share/colcon-core/meshes/: FRR.STL
install/vehicle/share/vehicle/: B4WTYPE3.urdf  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vehicle/share/vehicle/colcon-core/: B4WTYPE3.sdf
install/vehicle/share/vehicle/launch/: display.launch.py  gazebo.launch.py
install/vehicle/share/vehicle/model/: B4WTYPE3.sdf  B4WTYPE3.urdf
install/vehicle/share/vehicle/model/meshes/: BKR.STL
install/vehicle/share/vehicle/model/vehicle/: model.config
install/vehicle/share/vehicle/model/vehicle/meshes/: BKL.STL  FRL.STL
install/vehicle/share/vehicle/models/: B4WTYPE3.config
install/vehicle/share/vehicle/rviz/: vehicle.rviz
install/vehicle/share/vehicle/sdf/: B4WTYPE3.sdf
install/vehicle/share/vehicle/worlds/: B4WTYPE3.sdf  empty.world
log/: latest_build
src/vehicle/: CMakeLists.txt
src/vehicle/config/: ackermann_controller.yaml
src/vehicle/launch/: backupgazebo.launch.py  display.launch.py  gazebo.launch
src/vehicle/src/: ackermann_control.cpp
src/vehicle/urdf/: B4WTYPE3.csv  vehicle.config
src/vehicle/worlds/: empty.world
